for #39 - remove unnecessary test

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -28,7 +28,7 @@ p
   =@offer.location_name
 p
 =@offer.location_street
-- if @offer.location.addition?
+- if @offer.location_addition
   p
   =@offer.location_addition
 p
