--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,47 +1,31 @@
-.background-image
-  .container.container-full-size
-    .row
-      = render '/layouts/partials/about_teaser'
-      .main-search
-        = render '/offers/shared/search_form', search_cache: @search_cache
-.yellow-background
-  .about-2c
-    .container
-      .row.position-relative
-        .col-lg-6.hidden-xs.hidden-sm.position-absolute.bottom-zero.teaser-image
-          = image_tag('stock/child.png')
-        .col-lg-offset-6
-          .description-2c
-            h1
-              | Wie funktioniert Clarat
-
-            | Mit Clarat werden wir das Netz an Unterstützungsangeboten der Kinder-
-            | und Jugendförderung in Deutschland sichtbar und zugänglich machen.
-            | Entlang einfacher, leicht verständlicher Suchkriterien wird es Familien
-            | und Unterstützern ermöglicht, genau das Angebot zu finden, das sie
-            | erreichen können – und das sie erreicht.
-            br
-            br
-            | Clarat ist für uns in seiner Übersetzung aus dem Lateinischen Programm:
-            | Es klärt auf.
-.about-2c
-  .container
-    .row.position-relative
-      .col-lg-6
-        .description-2c
-          h1
-            | Warum machen wir Clarat
-
-          | Für Kinder, Jugendliche und Familien mit Beratungsbedarf bietet
-          | CLARAT eine einfach zu bedienende Oberfläche, auf der über eine
-          | leicht verständliche Suchfunktion die Einrichtungen gefiltert
-          | werden, die in erreichbarer Nähe sind und zu ihrem Anliegen passen.
-          br
-          br
-          | Menschen, die als Freunde, Lehrer, Ehrenamtliche oder in anderer
-          | Funktion Zugang zu einer Familie mit Unterstützungsbedarf haben und
-          | konkrete Hilfestellung geben möchten, bietet CLARAT eine
-          | maßgeschneiderte Übersicht an inhaltlich und geographisch passenden
-          | Angeboten.
-      .col-lg-offset-6.hidden-xs.hidden-sm.position-absolute.bottom-zero.teaser-image
-        = image_tag('stock/child.png')
+| <main class="content-main content-main--wide">
+|      <div class="wrapper-inner">
+|
+|        <section class="section-start section-start--how">
+|          <h4 class="section-start__headline">Wie funktioniert Clarat?</h4>
+|
+|          <div class="section-start__body">
+|            <p>Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du tun musst, was Du als nächstes tun musst, um das Angebot zu nutzen.</p>
+|          </div>
+|
+|        </section>
+|
+|        <section class="section-start section-start--whom">
+|          <h4 class="section-start__headline ">Wie funktioniert Clarat?</h4>
+|
+|          <div class="section-start__body">
+|            <p>clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte. Anliegen eingeben, Angebot finden und dann hin.</p>
+|          </div>
+|
+|        </section>
+|
+|        <section class="section-start section-start--why">
+|          <h4 class="section-start__headline">Warum machen wir Clarat?</h4>
+|
+|          <div class="section-start__body">
+|            <p>In Deutschland gibt es viele Unterstützungsangebote für Kinder, Jugendliche und Familien. Allerdings sind diese selten leicht zu finden. Mit clarat helfen wir Dir, schnell und unkompliziert zum passenden Angebot in deiner Nähe zu kommen.</p>
+|
+|        </section>
+|
+|      </div>
+|    </main>
