--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -53,6 +53,8 @@ html class='no-js' lang=I18n.locale
     |     </script>
     |     <!--<![endif]-->
 
+    / <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+
     javascript:
       $.noConflict();
 
