--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -16,11 +16,11 @@ footer.footer-main
 
         nav.nav-site
           ul.nav-site__list
-            li.nav-legal__listitem
+            li.nav-site__listitem
               a Über uns
-            li.nav-legal__listitem
+            li.nav-site__listitem
               a Häufige Fragen
-            li.nav-legal__listitem
+            li.nav-site__listitem
               a Kontakt
   section.footer-main__secondrow
     .wrapper-inner
