--- a/app/views/offers/_tag.html.slim
+++ b/app/views/offers/_tag.html.slim
@@ -1,3 +1,4 @@
-- active_class = search_cache.includes_tag(tag) ? 'active' : ''
-= link_to tag, offers_path(search_form: search_cache.toggle(tag)),
+li.Listing-tags__item
+  - active_class = search_cache.includes_tag(tag) ? 'active' : ''
+  = link_to tag, offers_path(search_form: search_cache.toggle(tag)),
   class: "btn btn-default btn-sm #{active_class}"
