--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,26 +20,6 @@ html class='no-js' lang=I18n.locale
     link rel="apple-touch-icon-precomposed" sizes="144x144" href=""
     meta name="msapplication-TileImage" content=""
 
-    script src="assets/javascripts/vendor/modernizr.js"
-
-    script src="assets/javascripts/vendor/modernizr.js"
-
-    |     <!--[if lt IE 9]>
-    |     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    |     <![endif]-->
-
-    |     <!--[if lt IE 9]>
-    |     <script src="assets/javascripts/vendor/jquery-1.11.1.min.js"></script>
-    |     <script>window.jQuery || document.write('<script src="assets/javascripts/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-    |     <![endif]-->
-    |     <!--[if gte IE 9]><!-->
-    |     <script src="assets/javascripts/vendor/jquery-2.1.1.min.js"></script>
-    |     <script>window.jQuery || document.write('<script src="assets/javascripts/vendor/jquery-2.1.1.min.js"><\/script>')</script>
-    |     <!--<![endif]-->
-
-    |     <!--[if lt IE 9]>
-    |     <script src="assets/js/vendor/selectivizr-min.js"></script>
-    |     <![endif]-->
 
     |     <!--[if !IE]><!-->
     |     <script>
@@ -54,8 +34,8 @@ html class='no-js' lang=I18n.locale
 
     / <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
 
-    javascript:
-      $.noConflict();
+    /javascript:
+    /  $.noConflict();
 
     = csrf_meta_tags
 
