--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -50,16 +50,15 @@
             .adr
               p
                 - if @offer.location_name
-                  span.org=@offer.location_name
+                  span.org= @offer.location_name
                   br
-                span.street-address=@offer.location_street
+                span.street-address= @offer.location_street
                 br
                 - if @offer.location_addition
-                  span.extended-address=@offer.location_addition
+                  span.extended-address= @offer.location_addition
                   br
-                span.postal-code=@offer.location_zip
-                br
-                span.locality=@offer.location_city
+                span.postal-code=> @offer.location_zip
+                span.locality= @offer.location_city
                 br
             /! http://microformats.org/wiki/adr end
 
