--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -1,4 +1,4 @@
-.wrapper-inner
+.wrapper-inner class="#{@location ? 'has' : 'hasnt'}"
   main.content-main.content-main--wide
 
     header.page-detail__header
@@ -21,23 +21,24 @@
 
     .section-wrapper-minor
 
-      section.section-content.section-content--where
-        h3.section-content__title Wo
-        .section-content__body
-          /! http://microformats.org/wiki/adr start
-          .adr
-            p
-              - if @location.name?
-                span.org= @location.name
+      - if @location
+        section.section-content.section-content--where
+          h3.section-content__title Wo
+          .section-content__body
+            /! http://microformats.org/wiki/adr start
+            .adr
+              p
+                - if @location.name?
+                  span.org= @location.name
+                  br
+                span.street-address= @location.street
                 br
-              span.street-address= @location.street
-              br
-              - if @location.addition?
-                span.extended-address= @location.addition
-                br
-              span.postal-code=> @location.zip
-              span.locality= @location.city
-          /! http://microformats.org/wiki/adr end
+                - if @location.addition?
+                  span.extended-address= @location.addition
+                  br
+                span.postal-code=> @location.zip
+                span.locality= @location.city
+            /! http://microformats.org/wiki/adr end
 
       section.section-content--map
         script src='https://maps.googleapis.com/maps/api/js?v=3.exp'
