Add layout switch output for offers#show, organizations#show views

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -1,4 +1,4 @@
-.wrapper-inner
+.wrapper-inner class="#{'no-location' unless @location}"
   main.content-main.content-main--wide
     header.page-detail__header
       h2.page-detail__title= @offer.name
