--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -1,4 +1,4 @@
-.wrapper-inner class="#{@location ? 'has' : 'hasnt'}"
+.wrapper-inner class="#{'no-location' unless @location}"
   main.content-main.content-main--wide
 
     header.page-detail__header
