Add basic typeahead styling including proposed design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import "modules/listing-results";
 @import "modules/listing-tags";
 @import "modules/listing-offers";
+@import "modules/map";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
@@ -37,5 +38,8 @@
 @import "navigation/nav-sections";
 @import "navigation/nav-site";
 @import "navigation/nav-legal";
+
+@import "vendor/twitter-typeahead_override";
+
 
 
