--- a/app/assets/stylesheets/config/_helpers.scss
+++ b/app/assets/stylesheets/config/_helpers.scss
@@ -25,6 +25,18 @@
 	font: 0/0 a;
 }
 
+
+%visually-hidden {
+	border: 0;
+	clip: rect(0 0 0 0);
+	height: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+}
+
 %clarat_rounding {
 	border-radius: 0 $border_radius;
 }
