--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,31 +1,17 @@
-| <main class="content-main content-main--wide">
-|      <div class="wrapper-inner">
-|
-|        <section class="section-start section-start--how">
-|          <h4 class="section-start__headline">Wie funktioniert Clarat?</h4>
-|
-|          <div class="section-start__body">
-|            <p>Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du tun musst, was Du als nächstes tun musst, um das Angebot zu nutzen.</p>
-|          </div>
-|
-|        </section>
-|
-|        <section class="section-start section-start--whom">
-|          <h4 class="section-start__headline ">Wie funktioniert Clarat?</h4>
-|
-|          <div class="section-start__body">
-|            <p>clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte. Anliegen eingeben, Angebot finden und dann hin.</p>
-|          </div>
-|
-|        </section>
-|
-|        <section class="section-start section-start--why">
-|          <h4 class="section-start__headline">Warum machen wir Clarat?</h4>
-|
-|          <div class="section-start__body">
-|            <p>In Deutschland gibt es viele Unterstützungsangebote für Kinder, Jugendliche und Familien. Allerdings sind diese selten leicht zu finden. Mit clarat helfen wir Dir, schnell und unkompliziert zum passenden Angebot in deiner Nähe zu kommen.</p>
-|
-|        </section>
-|
-|      </div>
-|    </main>
+main.content-main.content-main--wide
+  .wrapper-inner
+    section.section-start.section-start--how
+      h4.section-start__headline Wie funktioniert Clarat?
+      .section-start__body
+        p Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du tun musst, was Du als nächstes tun musst, um das Angebot zu nutzen.
+
+    section.section-start.section-start--whom
+      h4.section-start__headline Wie funktioniert Clarat?
+      .section-start__body
+        p clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte. Anliegen eingeben, Angebot finden und dann hin.
+
+
+    section.section-start.section-start--why
+      h4.section-start__headline Warum machen wir Clarat?
+      .section-start__body
+        p In Deutschland gibt es viele Unterstützungsangebote für Kinder, Jugendliche und Familien. Allerdings sind diese selten leicht zu finden. Mit clarat helfen wir Dir, schnell und unkompliziert zum passenden Angebot in deiner Nähe zu kommen.
