--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -1,6 +1,6 @@
 header.header-main.header-main--startpage
   .header-main__foreground.wrapper-inner
-    h1.Logo.Logo--start clarat.org
+    h1.Logo.Logo--start = link_to "clarat.org", '/'
 
     .Claim
       h2.Claim__firstrow Einfach Hilfe finden
