--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -63,33 +63,16 @@
             /! http://microformats.org/wiki/adr end
 
       section.section-content--map
-        script src='https://maps.googleapis.com/maps/api/js?v=3.exp'
-        div style='overflow:hidden;height:360px;width:428px;'
-          div id='gmap_canvas' style='height:428px;width:428px;'
-          | <style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
 
-        script type='text/javascript'
-          |   function init_map(){
-          |   var myOptions = {
-          |     zoom:12,center:new google.maps.LatLng(52.52000659999999,13.404953999999975),
-          |     mapTypeId: google.maps.MapTypeId.ROADMAP
-          |   };
-          |   map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
-          |   marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(52.52000659999999,13.404953999999975)});
-          |   infowindow = new google.maps.InfoWindow({
-          |     content:
-          |         'Dummy-Karteneinbindung'
-          |   });
-          |   google.maps.event.addListener(marker, 'click', function(){
-          |     infowindow.open(map,marker);
-          |   });
-          |   infowindow.open(map,marker);
-          | }
-          | google.maps.event.addDomListener(window, 'load', init_map);
+        .aside-standard__container
+          h5.aside-standard__headline Kartenausgabe
+          #map-container
+            #map-canvas data={ markers: '{"52.5071987700295,13.4224654888445":{"position":{"latitude":52.5071987700295,"longitude":13.4224654888445},"offer_ids":[5]}}', position: '{"latitude":52.5200066,"longitude":13.404954}' }
+
 
       - unless @offer.tags.empty?
         section.section-content.section-content--tags
-          h5.aside-standard__headline Schlagworte
+          h5.aside-standard__headline Zugeordnete Schlagworte
           ul.Listing-tags
             -@offer.tags.each do |tag|
               li.Listing-tags__item
@@ -97,3 +80,8 @@
 
       button.offer-contribute
         | Sind die hier dargestellten Informationen fehlerhaft oder unvollständig, lass es uns bitte wissen!
+
+
+- content_for :view_specific_scripts do
+  = javascript_include_tag "https://maps.googleapis.com/maps/api/js?v=3.exp"
+  = javascript_include_tag "gmaps_search_results.js"
