--- a/app/assets/stylesheets/base/_aside.scss
+++ b/app/assets/stylesheets/base/_aside.scss
@@ -8,7 +8,7 @@
 	font-weight: 400;
 	font-size: 18px;
 	margin-bottom: 25px;
-	margin-top: 30px;
+	margin-top: 0;
 }
 
 .aside-standard__container {
