--- a/app/assets/stylesheets/modules/sections/_section-organisation.scss
+++ b/app/assets/stylesheets/modules/sections/_section-organisation.scss
@@ -4,7 +4,7 @@
 //
 // ---------------------------------------------------------------
 
-.template--organisation {
+.template--organizations-show {
 
 
 	.section-content--who .section-content__title,
