Fix logo modifier for non-start pages

--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -1,6 +1,6 @@
 header.header-main
   .wrapper-inner
-    h1.Logo.Logo--start = link_to "clarat.org", '/'
+    h1.Logo.Logo = link_to "clarat.org", '/'
 
     .Distributor
       = render '/offers/shared/search_form', search_cache: search_cache
